...
    case create
    case edit(CalendarShoot)
    case readOnly(CalendarShoot)

    var title: String {
        switch self {
        case .create: "Thêm lịch quay"
        case .edit: "Chỉnh sửa lịch quay"
        case .readOnly: "Chi tiết lịch quay"
        }
    }

    var shootID: UUID? {
        switch self {
        case .create: nil
...
